tests/cli_diagnostics/check_unknown_name.golden
tests/fixtures/check_unknown_name.curlee:2:3: error: unknown name 'foo'
  |
  |   foo(1);
  |   ^^^
